# zk_hackthon

./: README.md  SHA256.pptx
category1/: README.md  constants.circom  gadgets.circom  sha256.circom
category1/test/: SHA256.js  SHA256_1.js  SHA256_2.js  tmp.js
category1/test/circuits/: SHA256.circom  SHA256_1.circom  SHA256_2.circom  tmp.circom
category4/: README.md
category4/benchmarking/: Cargo.toml
category4/blake2f-circuit/: Cargo.toml
category4/blake2f-gadget/: Cargo.toml  gates
category4/blake2f-gadget/src/: bits.rs
category4/blake2f-gadget/src/compression/: assignment.rs  gates.rs
category4/blake2f-gadget/src/scheduler/: mod.rs
category4/zk-mooc-halo2/blake2f-circuit/: Cargo.toml
category4/zk-mooc-halo2/blake2f-circuit/src/: lib.rs
category4/zk-mooc-halo2/blake2f-gate/src/: chip.rs  lib.rs  spread_table.rs  state.rs  util.rs
category4/zk-mooc-halo2/blake2f-gate/src/compression/: mod.rs  test.rs
category4/zk-mooc-halo2/blake2f-gate/src/scheduler/: assignment.rs  gates.rs
